<resources>
    <string name="app_name">ListOfCourse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="Accueil">Accueil</string>
    <string name="Abo">Abonnements</string>
    <string name="Historique">Historique</string>
    <string name="Share">Partage</string>
    <string name="Deco">Déconnexion</string>

    <string name="subscrib_message_erreur">Vous êtes déjà un membre abonnée ! \nVous ne pouvez pas souscrire deux fois à un abonnement.</string>
    <string name="subscrib_message_confir">Vous êtes sur le points de passer commande veuiller confirmer afin de prendre en compte votre requete.</string>
    <string name="list_message_delete_confir">Etes vous sur de vouloir supprimer cette liste</string>
    <string name="list_message_archive_confir">Etes vous sur de vouloir archiver cette list</string>
    <string name="art_message_delete_confir">Etes vous sur de vouloir supprimer cette acticle</string>
    <string name="buttonarchive">Archiver</string>
    <string name="buttondelete">Supprimer</string>
    <string name="buttoncancel">Annuler</string>
    <string name="buttonconfirm">Confirmer</string>
    <string name="buttonclose">Fermer</string>

</resources>